# Examples

./: .clang-format  .gitignore  CMakeLists.txt  README.md  configure.sh  default_build.sh
.github/ISSUE_TEMPLATE/: simple_template.md
.github/workflows/: testing.yml
Function/: CMakeLists.txt  Function.hpp
Function/tests/: Function_tests.cpp
Matrix/: CMakeLists.txt  Matrix.hpp
Matrix/tests/: matrix_tests.cpp
docs/: Installing.md
